--- a/webbplats.css
+++ b/webbplats.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(243, 9 ,9);
+    background-color: rgb(255, 255, 255);
 }
 
 h1{
@@ -11,4 +11,51 @@ h1{
 u1{
     font-family: Arial;
     font-size: 22px;
+}
+
+table,th,td{
+    border:1px solid black;
+    border-collapse: collapse;
+    height: 30px;
+    width: 1000px;
+    font-family: Arial;
+}
+
+th{
+    background-color: rgb(255, 255, 255);
+}
+
+tr:nth-child(odd){
+    background-color: rgb(255, 204, 0);
+}
+
+tr:nth-child(even){
+    background-color: rgb(212, 6, 6);
+    color: rgb(240, 240, 240);
+}
+
+th:nth-child(1){
+    text-align: left;
+}
+
+th:nth-child(4){
+    text-align: right; 
+}
+
+th:nth-child(2){
+    text-align: center;
+}
+
+th:nth-child(3){
+    text-align: center;
+}
+
+th:nth-child(4){
+    text-align: right;
+}
+
+caption{
+    caption-side: bottom;
+    font-size: 30px;
+    margin-top: 20px;
 }
