--- a/webbplats.css
+++ b/webbplats.css
@@ -27,15 +27,17 @@ th{
 
 tr:nth-child(odd){
     background-color: rgb(185, 174, 130);
+    text-align: center; 
 }
 
 tr:nth-child(even){
     background-color: rgb(255, 136, 0);
     color: rgb(240, 240, 240);
+    text-align: center;
 }
 
 th:nth-child(1){
-    text-align: left;
+    text-align: center;
 }
 
 th:nth-child(4){
@@ -116,3 +118,5 @@ footer{
     background-color: rgb(221, 235, 25);
     grid-area: footer;
 }
+
+
