--- a/webbplats.css
+++ b/webbplats.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
 }
 
 h1{
@@ -67,10 +67,10 @@ p img{
 }
 
 .wrapper{
-    width:90%;
+
     margin:0 auto;
     display:grid;
-    grid-template-rows: 80px 50px auto 50px;
+    grid-template-rows: 90px 50px auto 50px;
     grid-template-areas:
     "header"
     "nav"
@@ -110,6 +110,12 @@ main{
     grid-template-columns: 2fr 1fr;
     grid-template-rows: auto;
 }
+
+#index2 main{
+    grid-template-columns: 1fr;
+
+}
+
 h2{
     text-align: center;
 }
@@ -119,4 +125,19 @@ footer{
     grid-area: footer;
 }
 
+.p2 img{
+    height: 300px;
+}
+
+.p3 img{
+    height: 110px;
+}
+
+.p4 img{
+    height: 300px;
+}
+
+table{
+    margin: center;
+}
 
